kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: serversvc
spec:
  type: LoadBalancer
  selector:
    app: server
  ports:
  - port: 80
    targetPort: 8080
