kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: address-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
  - host: api.danielsgenaro.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: serversvc
            port:
              number: 80
